--- a/src/theme/_theme.variables.scss
+++ b/src/theme/_theme.variables.scss
@@ -4,29 +4,19 @@ html {
   &.plt-mobile {
     @include css-variables-to-root-mobile();
   }
-
-  --ion-color-step-50: #f3f3f3;
-  --ion-color-step-100: #e7e7e7;
-  --ion-color-step-150: #dbdbdb;
-  --ion-color-step-200: #d0d0d0;
-  --ion-color-step-250: #c4c4c4;
-  --ion-color-step-300: #b8b8b8;
-  --ion-color-step-350: #acacac;
-  --ion-color-step-400: #a0a0a0;
-  --ion-color-step-450: #949494;
-  --ion-color-step-500: #898989;
-  --ion-color-step-550: #7d7d7d;
-  --ion-color-step-600: #717171;
-  --ion-color-step-650: #656565;
-  --ion-color-step-700: #595959;
-  --ion-color-step-750: #4d4d4d;
-  --ion-color-step-800: #414141;
-  --ion-color-step-850: #363636;
-  --ion-color-step-900: #2a2a2a;
-  --ion-color-step-950: #1e1e1e;
 }
 
+/*
+ * Dark Theme
+ * -------------------------------------------
+ */
+
 html.dark {
+  // scroll bar
+  color-scheme: dark;
+
+  @include css-variables-to-root-dark();
+
   --ion-color-primary: #428cff;
   --ion-color-primary-rgb: 66, 140, 255;
   --ion-color-primary-contrast: #ffffff;
@@ -34,12 +24,12 @@ html.dark {
   --ion-color-primary-shade: #3a7be0;
   --ion-color-primary-tint: #5598ff;
 
-  --ion-color-secondary: #75c4fd;
-  --ion-color-secondary-rgb: 117, 196, 253;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #46b0e0;
-  --ion-color-secondary-tint: #62ceff;
+  //--ion-color-secondary: #75c4fd;
+  //--ion-color-secondary-rgb: 117, 196, 253;
+  //--ion-color-secondary-contrast: #ffffff;
+  //--ion-color-secondary-contrast-rgb: 255, 255, 255;
+  //--ion-color-secondary-shade: #46b0e0;
+  //--ion-color-secondary-tint: #62ceff;
 
   --ion-color-tertiary: #6a64ff;
   --ion-color-tertiary-rgb: 106, 100, 255;
@@ -90,45 +80,74 @@ html.dark {
   --ion-color-light-contrast-rgb: 255, 255, 255;
   --ion-color-light-shade: #1e2023;
   --ion-color-light-tint: #383a3e;
+
+  --ion-background-color: #000000;
+  --ion-background-color-rgb: 0, 0, 0;
+  --ion-toolbar-background: #1f1f1f;
+  --ion-text-color: #ffffff;
+  --ion-text-color-rgb: 255, 255, 255;
+  --ion-border-color: #222222;
+  --ion-backdrop-color: #ffffff;
+
+  --app-form-color-disabled: #949494;
+  --app-form-color: var(--ion-color-light-contrast);
+  --app-form-field-background-color: var(--ion-color-light-tint);
+  --app-form-field-background-color-shade: #282828;
+  --app-form-field-disabled-background-color: #282828;
+  --app-form-field-label-color: #949494;
+  --app-form-field-disabled-label-color: #7d7d7d;
+  --mat-select-panel-background-color: var(--ion-color-step-100);
+
+  ion-menu#menu {
+    --ion-item-text-color-selected: var(--ion-color-secondary100-contrast);
+    --ion-item-icon-color-selected: var(--ion-color-secondary100-contrast);
+
+    ion-item.selected:hover {
+      --ion-item-text-color-selected: var(--ion-color-secondary100-contrast) !important;
+      --ion-item-icon-color-selected: var(--ion-color-secondary100-contrast) !important;
+    }
+  }
 }
 
-html.md.dark {
-  --app-form-color-disabled: #949494;
-  --app-form-color: var(--ion-text-color);
+/*
+ * iOS Dark Theme
+ * -------------------------------------------
+ */
 
+html.ios.dark {
+  --ion-item-background: #000000;
+  --ion-card-background: #1c1c1d;
+
+  --ion-color-step-50: #0d0d0d;
+  --ion-color-step-100: #1a1a1a;
+  --ion-color-step-150: #262626;
+  --ion-color-step-200: #333333;
+  --ion-color-step-250: #404040;
+  --ion-color-step-300: #4d4d4d;
+  --ion-color-step-350: #595959;
+  --ion-color-step-400: #666666;
+  --ion-color-step-450: #737373;
+  --ion-color-step-500: #808080;
+  --ion-color-step-550: #8c8c8c;
+  --ion-color-step-600: #999999;
+  --ion-color-step-650: #a6a6a6;
+  --ion-color-step-700: #b3b3b3;
+  --ion-color-step-750: #bfbfbf;
+  --ion-color-step-800: #cccccc;
+  --ion-color-step-850: #d9d9d9;
+  --ion-color-step-900: #e6e6e6;
+  --ion-color-step-950: #f2f2f2;
+}
+
+/*
+ * Material Design Dark Theme
+ * -------------------------------------------
+ */
+
+html.md.dark {
   --ion-background-color: #121212;
   --ion-background-color-rgb: 18, 18, 18;
-
-  --ion-text-color: #ffffffde;
-  --ion-text-color-rgb: 255, 255, 255;
-
-  --ion-border-color: #222222;
-
-  --ion-color-step-50: #1e1e1e;
-  --ion-color-step-100: #2a2a2a;
-  --ion-color-step-150: #363636;
-  --ion-color-step-200: #414141;
-  --ion-color-step-250: #4d4d4d;
-  --ion-color-step-300: #595959;
-  --ion-color-step-350: #656565;
-  --ion-color-step-400: #717171;
-  --ion-color-step-450: #7d7d7d;
-  --ion-color-step-500: #898989;
-  --ion-color-step-550: #949494;
-  --ion-color-step-600: #a0a0a0;
-  --ion-color-step-650: #acacac;
-  --ion-color-step-700: #b8b8b8;
-  --ion-color-step-750: #c4c4c4;
-  --ion-color-step-800: #d0d0d0;
-  --ion-color-step-850: #dbdbdb;
-  --ion-color-step-900: #e7e7e7;
-  --ion-color-step-950: #f3f3f3;
-
   --ion-item-background: #1e1e1e;
-
-  --ion-toolbar-background: #1f1f1f;
-
   --ion-tab-bar-background: #1f1f1f;
-
   --ion-card-background: #1e1e1e;
 }
